--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@line/bot-sdk": "^9.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase-admin": "^13.3.0",
     "ngrok": "^5.0.0-beta.2"
   }
 }
